added media queries and some styling

--- a/dorsal/index.html
+++ b/dorsal/index.html
@@ -10,16 +10,20 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="app.css">
-    </head>
+        <link href="./efx.css" rel="stylesheet" type="text/css">
     <body>
             <div class="overlay"></div>
             <header class="header">
                 <div class="app-name">SHARK DATA 1.0</div>
-                <div><img src="./assets/animals-shark-icon-1.png" class="icon-medium"></header></div>
+                <div><img src="./assets/animals-shark-icon-1.png" class="icon-medium"></div>
+            </header>
 
             <main class="main__display-container" >
                 <section class="sidebar"></section>
-                <section></section>
+                <section class="main__content-panel">
+                    <h1>Countries on the Dorsal network.</h1>
+                    <div class="main__content-panel-list-data"></div>
+                </section>
             </main>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
