updated button styling

--- a/dorsal/index.html
+++ b/dorsal/index.html
@@ -21,7 +21,7 @@
             <main class="main__display-container" >
                 <section class="sidebar"></section>
                 <section class="main__content-panel">
-                    <h1>Countries on the Dorsal network.</h1>
+                    <h1 class="main__content-panel-title"></h1>
                     <div class="main__content-panel-list-data"></div>
                 </section>
             </main>
