--- a/dorsal/index.html
+++ b/dorsal/index.html
@@ -14,7 +14,7 @@
     <body>
             <div class="overlay"></div>
             <header class="header">
-                <div class="app-name">SHARK DATA 1.0</div>
+                <div class="app-name"></div>
                 <div><img src="./assets/animals-shark-icon-1.png" class="icon-medium"></div>
             </header>
 
